--- a/order-service.properties
+++ b/order-service.properties
@@ -5,3 +5,4 @@ spring.datasource.initialization-mode=always
 spring.jpa.show-sql=true
 #server.port=8081
 spring.application.name=order-service
+spring.datasource.url=jdbc:mysql://localhost:3306/order-service
